--- a/lsh_post1/lsh_post1.tex
+++ b/lsh_post1/lsh_post1.tex
@@ -26,7 +26,7 @@
 \usepackage{hyperref}
 \PassOptionsToPackage{usenames,dvipsnames}{color} % color is loaded by hyperref
 \hypersetup{unicode=true,
-            pdftitle={Introduction to Locality-Sensitive Hashes},
+            pdftitle={Introduction to Locality-Sensitive Hashing},
             pdfauthor={Tyler Neylon},
             colorlinks=true,
             linkcolor=black,
@@ -79,7 +79,7 @@
 \floatname{codelisting}{Listing}
 \newcommand*\listoflistings{\listof{codelisting}{List of Listings}}
 
-\title{Introduction to Locality-Sensitive Hashes}
+\title{Introduction to Locality-Sensitive Hashing}
 \author{Tyler Neylon}
 \date{521.2018}
 
@@ -111,6 +111,12 @@
 
 \providecommand{\flexquad}{\quad\smallscrskip{-0.8em}}
 \providecommand{\flexspace}{\;\;\smallscrskip{-0.3em}}
+
+{[}Formats: \href{http://tylerneylon.com/a/lsh1/lsh_post1.html}{html}
+\textbar{} \href{http://tylerneylon.com/a/lsh1/lsh_post1.pdf}{pdf}
+\textbar{}
+\href{http://tylerneylon.com/a/lsh1/lsh_post1_for_kindle.pdf}{kindle
+pdf}{]}
 
 \emph{Locality-sensitive hashing} (LSH) is a set of techniques that
 dramatically speed up search-for-neighbors or near-duplication detection
@@ -160,22 +166,23 @@ Hash functions typically have these key properties:
 
 Here's how LSH fits in: Locality-sensitive hash functions are
 specifically designed so that hash value collisions are \emph{more
-likely} for two input values that are \emph{close together}. Just as
-there are different implementations of secure hash functions for
-different use cases, there are different implementations of LSH
-functions for different data types and for different definitions of
-being \emph{close together}. I'll use the terms \emph{neighbors} or
-\emph{being nearby} to refer to points that we deem ``close enough''
-together that we'd want to notice their similarity. In this post, I'll
-give a brief overview of the key ideas behind LSH and take a look at a
-simple example based on an idea called \emph{random projections}, which
-I'll define in section 2 below.
+likely} for two input values that are \emph{close together} than for
+inputs that are far apart. Just as there are different implementations
+of secure hash functions for different use cases, there are different
+implementations of LSH functions for different data types and for
+different definitions of being \emph{close together}. I'll use the terms
+\emph{neighbors} or \emph{being nearby} to refer to points that we deem
+``close enough'' together that we'd want to notice their similarity. In
+this post, I'll give a brief overview of the key ideas behind LSH and
+take a look at a simple example based on an idea called \emph{random
+projections}, which I'll define in section 2 below.
 
 \section{A human example}\label{a-human-example}
 
-It will probably be much easier to grasp the main idea with an example
-you can relate to. This way we can build some intuition before diving
-into those random projections that we'll use in the next section.
+It will probably be much easier to grasp the main idea behind LSH with
+an example you can relate to. This way we can build some intuition
+before diving into those random projections that we'll use in the next
+section.
 
 Suppose you have a million people from across the United States all
 standing in a huge room. It's your job to get people who live close
@@ -189,13 +196,13 @@ Here's a much better way to solve this problem: Write every U.S. zip
 code on poster boards and hang those from the ceiling. Then tell
 everyone to go stand under the zip code where they live.
 
-Voila! That's much easier, right? The main idea here is also the main
-idea behind locality-sensitive hashes. We're taking an arbitrary data
-type (a person, who we can think of as a ton of data including their
-street address), and mapping that data into a set of discrete values
-(zip codes) such that people who live close together probably hash to
-the same value. In other words, the clusters (people with the same zip
-code) are very likely to be groups of neighbors.
+Voila! That's much easier, right? That's also the main idea behind LSH.
+We're taking an arbitrary data type (a person, who we can think of as a
+ton of data including their street address), and mapping that data into
+a set of discrete values (zip codes) such that people who live close
+together probably hash to the same value. In other words, the clusters
+(people with the same zip code) are very likely to be groups of
+neighbors.
 
 A nice benefit of the zip code approach is that it's
 \emph{parallel-friendly}. Instead of requiring a center of
@@ -216,9 +223,10 @@ can never happen.
 \section{Hashing points with
 projections}\label{hashing-points-with-projections}
 
-In this section, we'll explain exactly how a relatively straightforward
+In this section, I'll explain exactly how a relatively straightforward
 LSH approach works, explore some key parameters for this LSH system, and
-review why it's an order of magnitude faster than some other approaches.
+review why this technique is an order of magnitude faster than some
+other approaches.
 
 Let's start with an incredibly simple mathematical function that we can
 treat as an LSH. Define \(h_1:\R^2 \to \Z\) for a point
@@ -307,7 +315,7 @@ and \(b,\) we could define a new hash function via
 where I'm using the notation \(( \textit{vec} )_1\) to indicate the
 first coordinate of the vector value \emph{vec}. (That is, the notation
 \((Ux)_1\) means the first coordinate of the vector \(Ux\).) This
-function is the \emph{random projection} I had referred to earlier.
+function is the \emph{random projection} I referred to earlier.
 
 It may seem a tad arbitrary to use only the first coordinate here rather
 than any other, but the fact that we're taking a random rotation first
@@ -387,20 +395,21 @@ that our similarity relationship \(a\sim b\) is transitively closed.
 It may help your intuition to see this new definition of \(a\sim b\) in
 action on the same 100 points from figure~\ref{fig:fig4}. This time, in
 figure~\ref{fig:fig5}, there are twenty random hashes, and we're seeing
-the graphs generated by (\ref{eq:eq2}) using cutoff values (values of
-\(j\)) of 6, 7, 8, and 9. The top-left graph in figure~\ref{fig:fig5}
-has an edge drawn between two points \(a\) and \(b\) whenever there are
-at least 6 hash functions \(h_i()\) with \(h_i(a) = h_i(b),\) out of a
-possible 20 used hash functions.
+the graphs generated by equation (\ref{eq:eq2}) using cutoff values
+(values of \(j\)) of 6, 7, 8, and 9. The top-left graph in
+figure~\ref{fig:fig5} has an edge drawn between two points \(a\) and
+\(b\) whenever there are at least 6 hash functions \(h_i()\) with
+\(h_i(a) = h_i(b),\) out of a possible 20 used hash functions.
 
 \begin{figure}
 \centering
 \includegraphics{images/lsh_image5.png}
 \caption{A set of 100 random points with graph edges drawn according to
 (\ref{eq:eq2}). There are 20 random hash functions used. The top-left
-graph uses the cutoff value \(j=6.\) The remaining three graphs have
-cutoff values \(j=7,\) 8, and 9; this means each graph is a subgraph
-(having a subset of the edges) of the previous one.}\label{fig:fig5}
+graph uses the cutoff value \(j=6.\) The remaining three graphs, from
+top-left to bottom-right, have cutoff values \(j=7,\) 8, and 9
+respectively; this means each graph is a subgraph (having a subset of
+the edges) of the previous one.}\label{fig:fig5}
 \end{figure}
 
 In fact, we can visualize all possible cutoff values of 6 or higher ---
@@ -434,7 +443,7 @@ collide, so \(h_i(p) = h_i(q)\) for all \(i\). In a lightly shaded
 region that equation will only hold true for a smaller subset of the
 hash functions \(h_i().\)
 
-The second part (with 5 hashes) of figure~\ref{fig:fig8a} shows nicer
+The second part of figure~\ref{fig:fig8a} (with 5 hashes) shows nicer
 behavior, and I'll try to explain why. Imagine that we were drawing
 these same images for some theoretically perfect LSH setup that somehow
 managed to match point \(q\) to every point \(p\) with \(||p-q||\le r\)
@@ -484,10 +493,10 @@ functions gives us much more accurate lookups than if we used a single
 hash function. An interesting property of figure~\ref{fig:fig6} and
 figure~\ref{fig:fig8b} is that we used different numbers of hash
 collisions --- via the variable \(j\) --- to discover different degrees
-of similarity between points. In many applications, such as findin near
+of similarity between points. In many applications, such as finding near
 duplicates or close geospatial points, we only want a binary output, so
-we have to choose a particular value for \(j\). This section provides
-more insight into this question of choosing good values for \(j\).
+we have to choose a particular value for \(j\). Let's discuss how to
+choose good values for \(j.\)
 
 Suppose \(k\) is fixed. How can we decide which value of \(j\) is best?
 
@@ -557,17 +566,17 @@ approach is to insist that \emph{all} of your random hashes must collide
 before you consider two points to be neighbors, but this measurement
 shows that intuition to be false.
 
-Next I'll explain exactly what is measured in figure~\ref{fig:fig9}. A
-traditional box plot visualizes the 25th and 75th percentiles of a set
-of scalar data points as the boundaries of the box. Often the median
-(50th percentile) is also shown within the box, but we don't include an
+So what exactly did we measure in figure~\ref{fig:fig9}? A traditional
+box plot visualizes the 25th and 75th percentiles of a set of scalar
+data points as the boundaries of the box. Often the median (50th
+percentile) is also shown within the box, but we don't include an
 analogous mark in figure~\ref{fig:fig9}. The ``whiskers'' at either end
 may indicate the minimum and maximum values, or something similar such
 as the extreme values after removing outliers.
 
 In our case, we have one box plot for each value of \(j\), and each plot
 has been normalized so that the bottom whiskers all align at value 1.
-I'll explain why this is useful in a moment. The bottom whisker
+(I'll explain why this is useful in a moment.) The bottom whisker
 indicates the distance between \(p\) and \(q\) so that \(p\sim_j q\) is
 true 99\% of the time. The bottom of the box is the relative distance at
 which \(p\sim_j q\) is true 75\% of the time. Continuing in this
@@ -577,10 +586,10 @@ which we get collisions 1\% of the time. Since the box plots are all
 normalized (meaning that the distances per \(j\) value have all been
 divided through by the smallest distance), it's easy to visually see the
 ratio of each box plot position versus its smallest distance. In other
-words, it's easy to visually see which distance range is smallest.
+words, it's easy to see which distance range is smallest.
 
 Because I love math and precision, I'm going to provide one last
-definition to formalize the idea of this figure. Given a value
+definition to formalize the idea of figure~\ref{fig:fig9}. Given a value
 \(s \in (0, 1)\), define the distance \(D_s\) as the value satisfying
 the given equation:
 
@@ -589,7 +598,7 @@ the given equation:
 where \(p\sim_j q\) means that \(\#\{i : h_i(p) = h_i(q)\} \ge j.\)
 Intuitively, if \(\varepsilon\) is close to zero, then the distance
 \(D_\varepsilon\) is large because the probability of \(p\sim_j q\) is
-small. The value of \(D_{1/2}\) is just the perfect distance so that
+small. The value of \(D_{1/2}\) is the perfect distance so that
 \(p \sim_j q\) happens half of the time, and \(D_{1-\varepsilon}\) is a
 small distance where \(p \sim_j q\) happens almost all the time. Using
 this definition, the four values shown in each box plot of
@@ -652,7 +661,7 @@ returned by your hash functions. Even if you wanted to take the more
 complex approach of setting \(j < k,\) you would still gain a speedup
 even on pairwise comparisons. Normally it requires \(O(d)\) time to
 compute the distance between two points. Using \(k \approx \log(n)\)
-hashes, it would take \(O(\log(n))\) time instead to compute the number
+hashes, it would instead take \(O(\log(n))\) time to compute the number
 of hash collisions between two points.
 
 To show how significant this last speedup can be, imagine looking for
@@ -673,7 +682,7 @@ easier to visualize. Locality-sensitive hashes can certainly be used for
 many data types including strings, sets, or high-dimensional vectors.
 
 Yet another ingredient to throw into the mix here is a set of techniques
-to boost performance which treat an LSH as a black box. My favorite
+to boost performance tht treat an LSH as a black box. My favorite
 approach here is to simply perform multiple lookups on a hash system,
 each time using \(q + \varepsilon\) as an input, where \(q\) is your
 query value, and \(\varepsilon\) is a random variable centered at zero
