--- a/randnn/randnn.bib
+++ b/randnn/randnn.bib
@@ -1,30 +1,23 @@
-@article{broder2000min,
-  title={Min-wise independent permutations},
-  author={Broder, Andrei Z and Charikar, Moses and Frieze, Alan M and Mitzenmacher, Michael},
-  journal={Journal of Computer and System Sciences},
-  volume={60},
-  number={3},
-  pages={630--659},
-  year={2000},
-  publisher={Elsevier}
+@inproceedings{he2015delving,
+  title={Delving deep into rectifiers: Surpassing human-level performance on imagenet classification},
+  author={He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
+  booktitle={Proceedings of the IEEE international conference on computer vision},
+  pages={1026--1034},
+  year={2015}
 }
 
-@article{dasgupta2003elementary,
-  title={An elementary proof of a theorem of Johnson and Lindenstrauss},
-  author={Dasgupta, Sanjoy and Gupta, Anupam},
-  journal={Random Structures \& Algorithms},
-  volume={22},
-  number={1},
-  pages={60--65},
-  year={2003},
-  publisher={Wiley Online Library}
+@inproceedings{glorot2010understanding,
+  title={Understanding the difficulty of training deep feedforward neural networks},
+  author={Glorot, Xavier and Bengio, Yoshua},
+  booktitle={Proceedings of the thirteenth international conference on artificial intelligence and statistics},
+  pages={249--256},
+  year={2010}
 }
 
-@inproceedings{panigrahy2006entropy,
-  title={Entropy based nearest neighbor search in high dimensions},
-  author={Panigrahy, Rina},
-  booktitle={Proceedings of the seventeenth annual ACM-SIAM symposium on Discrete algorithm},
-  pages={1186--1195},
-  year={2006},
-  organization={Society for Industrial and Applied Mathematics}
+@online{goodfellow2017cs231n,
+  title = {Adversarial Examples and Adversarial Training (Stanford cs231n, Lecture 16)},
+  date = {2017},
+  organization = {YouTube},
+  author = {Ian Goodfellow},
+  url = {https://www.youtube.com/watch?v=CIfsB_EYsVI#t=16m32s}
 }
