lsh1: Add blurbs for Unbox.

--- a/lsh_post1/lsh_post1.tex
+++ b/lsh_post1/lsh_post1.tex
@@ -696,6 +696,21 @@ quickly finding nearby sets as well as nearby strings (Broder et al.
 
 \begin{center}\rule{0.5\linewidth}{\linethickness}\end{center}
 
+\emph{\textbf{Hi!} I hope you enjoyed my article. As you can see, I love
+building systems that get the most out of data. If you'd like to work
+together on a machine learning project, I'd love to hear from you. My
+company, Unbox Research, has a small team of talented ML engineers. We
+specialize in helping content platforms make more intelligent use of
+their data, which translates to algorithmic text and image comprehension
+as well as driving user engagement through discovery or personalization.
+I'm
+\href{mailto:tyler@unboxresearch.com}{\nolinkurl{tyler@unboxresearch.com}}.}
+
+\emph{(I'm also teaching a course on TensorFlow in New York in Jan 2019!
+\href{http://unboxresearch.com/tf101}{Register here.})}
+
+\begin{center}\rule{0.5\linewidth}{\linethickness}\end{center}
+
 \section*{References}\label{references}
 \addcontentsline{toc}{section}{References}
 
