--- a/lsh_post1/lsh_post1_for_kindle.tex
+++ b/lsh_post1/lsh_post1_for_kindle.tex
@@ -703,11 +703,8 @@ company, Unbox Research, has a small team of talented ML engineers. We
 specialize in helping content platforms make more intelligent use of
 their data, which translates to algorithmic text and image comprehension
 as well as driving user engagement through discovery or personalization.
-I'm
+Email me at
 \href{mailto:tyler@unboxresearch.com}{\nolinkurl{tyler@unboxresearch.com}}.}
-
-\emph{(I'm also teaching a course on TensorFlow in New York in Jan 2019!
-\href{http://unboxresearch.com/tf101}{Register here.})}
 
 \begin{center}\rule{0.5\linewidth}{\linethickness}\end{center}
 
