A lot of work to get table 3 lookin' good.

--- a/permutations/part1/template.tex
+++ b/permutations/part1/template.tex
@@ -440,7 +440,7 @@ $endif$
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Begin custom, non-pandoc commands.
 
-\newcommand{\latexonlyrule}{\rule}
+\newcommand{\customstrut}{\rule[-3mm]{0mm}{7.5mm}}
 \newenvironment{densearray}{\begin{array}{rcl}}{\end{array}}
 \newcommand{\class}[1]{}
 \newcommand{\Rule}[3]{}
