Set up the references section.

--- a/permutations/part1/template.tex
+++ b/permutations/part1/template.tex
@@ -319,7 +319,7 @@ $if(csl-refs)$
   \def\par{\hangindent=\cslhangindent\oldpar}
   \fi
   % set entry spacing
-  \setlength{\parskip}{#2\cslentryspacingunit}
+  \setlength{\parskip}{\cslentryspacingunit}
  }%
  {}
 \usepackage{calc}
