Work on improving the mobile display.

--- a/permutations/part1/template.tex
+++ b/permutations/part1/template.tex
@@ -460,6 +460,9 @@ $endif$
 \newcommand{\boxedstart}{\begin{myboxed}}
 \newcommand{\boxedend}{\end{myboxed}}
 
+\let\smallstart\iffalse
+\let\smallend\fi
+
 % End custom, non-pandoc commands.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
