Work on writing up the worked example.

--- a/permutations/part2/template.tex
+++ b/permutations/part2/template.tex
@@ -460,6 +460,13 @@ $endif$
 \newcommand{\boxedstart}{\begin{myboxed}}
 \newcommand{\boxedend}{\end{myboxed}}
 
+\newcommand{\crossedouty}{\dot y \kern -4.5pt \raise 4.9pt \hbox{\(\scriptscriptstyle\diagup\)}}
+\newcommand{\crossedoutone}{\dot 1 \kern -5.1pt \raise 6.6pt \hbox{\(\scriptscriptstyle\diagup\)}}
+\newcommand{\crossedouttwo}{\dot 2 \kern -5.1pt \raise 6.6pt \hbox{\(\scriptscriptstyle\diagup\)}}
+\newcommand{\crossedoutthree}{\dot 3 \kern -5.1pt \raise 6.6pt \hbox{\(\scriptscriptstyle\diagup\)}}
+\newcommand{\crossedoutfive}{\dot 5 \kern -5.1pt \raise 6.6pt \hbox{\(\scriptscriptstyle\diagup\)}}
+\newcommand{\crossedoutsix}{\dot 6 \kern -5.1pt \raise 6.6pt \hbox{\(\scriptscriptstyle\diagup\)}}
+
 \let\smallstart\iffalse
 \let\smallend\fi
 
