Write up more of the worked example steps.

--- a/permutations/part2/template.tex
+++ b/permutations/part2/template.tex
@@ -466,6 +466,7 @@ $endif$
 \newcommand{\crossedoutthree}{\dot 3 \kern -5.1pt \raise 6.6pt \hbox{\(\scriptscriptstyle\diagup\)}}
 \newcommand{\crossedoutfive}{\dot 5 \kern -5.1pt \raise 6.6pt \hbox{\(\scriptscriptstyle\diagup\)}}
 \newcommand{\crossedoutsix}{\dot 6 \kern -5.1pt \raise 6.6pt \hbox{\(\scriptscriptstyle\diagup\)}}
+\newcommand{\crossedoutseven}{\dot 7 \kern -5.1pt \raise 6.6pt \hbox{\(\scriptscriptstyle\diagup\)}}
 
 \let\smallstart\iffalse
 \let\smallend\fi
