Work on writing up the proof of correctness.

--- a/permutations/part2/template.tex
+++ b/permutations/part2/template.tex
@@ -467,6 +467,7 @@ $endif$
 \newcommand{\crossedoutfive}{\dot 5 \kern -5.1pt \raise 6.6pt \hbox{\(\scriptscriptstyle\diagup\)}}
 \newcommand{\crossedoutsix}{\dot 6 \kern -5.1pt \raise 6.6pt \hbox{\(\scriptscriptstyle\diagup\)}}
 \newcommand{\crossedoutseven}{\dot 7 \kern -5.1pt \raise 6.6pt \hbox{\(\scriptscriptstyle\diagup\)}}
+\newcommand{\lowerhaty}{\lower 1ex\hbox{\(\hat y\)}}
 
 \let\smallstart\iffalse
 \let\smallend\fi
