Write up the general chalkboard algorithm desc'n.

--- a/permutations/part2/template.tex
+++ b/permutations/part2/template.tex
@@ -468,6 +468,7 @@ $endif$
 \newcommand{\crossedoutsix}{\dot 6 \kern -5.1pt \raise 6.6pt \hbox{\(\scriptscriptstyle\diagup\)}}
 \newcommand{\crossedoutseven}{\dot 7 \kern -5.1pt \raise 6.6pt \hbox{\(\scriptscriptstyle\diagup\)}}
 \newcommand{\lowerhaty}{\lower 1ex\hbox{\(\hat y\)}}
+\newcommand{\lhy}{\lower 1ex\hbox{\(\hat y\)}}
 
 \let\smallstart\iffalse
 \let\smallend\fi
