Start adding helpful steps taken.

--- a/py_bug_analysis/template.tex
+++ b/py_bug_analysis/template.tex
@@ -84,7 +84,7 @@ $endif$
 \usepackage{amsmath,amssymb}
 \usepackage{fancyvrb}
 \usepackage{fvextra}
-\RecustomVerbatimEnvironment{verbatim}{Verbatim}{commandchars=\\\{\}}
+%\RecustomVerbatimEnvironment{verbatim}{Verbatim}{commandchars=\\\{\}}
 $if(fontfamily)$
 \usepackage[$for(fontfamilyoptions)$$fontfamilyoptions$$sep$,$endfor$]{$fontfamily$}
 $else$
