--- a/lego_puzzle/lego_puzzle.tex
+++ b/lego_puzzle/lego_puzzle.tex
@@ -169,5 +169,19 @@
 Here's a fun puzzle: Take six boxes, each \(1\times 2\times 2\) in size,
 and find a way to pack them into a \(3\times 3\times 3\) cube.
 
+(image here)
+
+I learned about this puzzle through Donald Knuth's \emph{The Art of
+Computer Programming,} \(\S 7.2.2.1\). The boxes have a total volume of
+24 cubies (I'll call a \(1\times 1\times 1\) unit a ``cubie,'' as Knuth
+does). They certainly have a chance of fitting into the 27 cubie spaces
+of the larger \(3\times 3\times 3\) volume. But the initial
+configurations I tried failed to fit:
+
+(another image here)
+
+You might be able to solve this by simply thinking about it. But it's
+even more fun to play with a physical model.
+
 \end{document}
 
