Lego puzzle: Add svg for img2.

--- a/lego_puzzle/lego_puzzle.tex
+++ b/lego_puzzle/lego_puzzle.tex
@@ -174,9 +174,8 @@ Computer Programming,} \(\S 7.2.2.1\). The six boxes have a total volume
 of 24 cubies (I'll call a \(1\times 1\times 1\) unit a ``cubie,'' as
 Knuth does). They certainly have a chance of fitting into the 27 cubie
 spaces of the larger \(3\times 3\times 3\) volume. But the initial
-configurations I tried failed to fit:
-
-(another image here)
+configurations I tried failed to fit more than five boxes in the space
+allowed:
 
 You might be able to solve this by simply thinking about it. But it's
 even more fun to play with a physical model.
