Lego puzzle: Add the Lego cube image.

--- a/lego_puzzle/lego_puzzle.tex
+++ b/lego_puzzle/lego_puzzle.tex
@@ -195,7 +195,11 @@ allowed:
 \begin{center}\includegraphics[width=0.5\textwidth]{img/img2.pdf}\end{center}
 
 You might be able to solve this by simply thinking about it. But it's
-even more fun to play with a physical model.
+even more fun to play with a physical model. \newline Did you know that
+a \(2\times 2\) Lego brick with 2 tile-heights on top forms a perfect
+cube?
+
+\begin{center}\includegraphics[width=0.5\textwidth]{img/annotated_lego_cube.png}\end{center}
 
 \end{document}
 
