Lego puzzle: Add box build steps.

--- a/lego_puzzle/lego_puzzle.tex
+++ b/lego_puzzle/lego_puzzle.tex
@@ -204,6 +204,7 @@ cube?
 This allows us to construct the puzzle like so:
 
 \begin{center}\includegraphics[width=0.9\textwidth,height=\textheight]{img/piece_steps2.png}\end{center}
+\begin{center}\includegraphics[width=0.9\textwidth,height=\textheight]{img/puzzle_box_steps.png}\end{center}
 
 \end{document}
 
