Lego puzzle: Work on adding home model.

--- a/lego_puzzle/lego_puzzle.tex
+++ b/lego_puzzle/lego_puzzle.tex
@@ -206,5 +206,9 @@ This allows us to construct the puzzle like so:
 \begin{center}\includegraphics[width=0.9\textwidth,height=\textheight]{img/piece_steps2.png}\end{center}
 \begin{center}\includegraphics[width=0.9\textwidth,height=\textheight]{img/puzzle_box_steps.png}\end{center}
 
+Here's the hodgepodge model I built with my kids' Legos:
+
+\begin{center}\includegraphics[width=0.5\textwidth]{img/home_model.jpg}\end{center}
+
 \end{document}
 
