Lego puzzle: Set up the spoiler warning image.

--- a/lego_puzzle/lego_puzzle.tex
+++ b/lego_puzzle/lego_puzzle.tex
@@ -179,6 +179,9 @@
 \href{http://tylerneylon.com/a/lego_puzzle/lego_puzzle.pdf}{pdf}
 \(\,\){]}
 
+\hypertarget{the-puzzle}{%
+\section{The Puzzle}\label{the-puzzle}}
+
 Here's a fun puzzle: Take six boxes, each \(1\times 2\times 2\) in size,
 and find a way to pack them into a \(3\times 3\times 3\) cube.
 
@@ -209,6 +212,21 @@ This allows us to construct the puzzle like so:
 Here's the hodgepodge model I built with my kids' Legos:
 
 \begin{center}\includegraphics[width=0.7\textwidth]{img/home_model.jpg}\end{center}
+
+I'll write a little about the math behind this puzzle below, but for now
+I'll give you a vertical break so you don't accidentally see the
+solution. Try out the puzzle first!
+
+~ \vspace{1in}
+
+\begin{center}\includegraphics[width=0.9\textwidth,height=\textheight]{img/here_be_spoilers.jpg}\end{center}
+
+~ \newpage
+
+\hypertarget{the-solution}{%
+\section{The Solution}\label{the-solution}}
+
+Next part of the article.
 
 \end{document}
 
