Lego puzzle: Add the solution image to article.

--- a/lego_puzzle/lego_puzzle.tex
+++ b/lego_puzzle/lego_puzzle.tex
@@ -226,7 +226,9 @@ solution. Try out the puzzle first!
 \hypertarget{the-solution}{%
 \section{The Solution}\label{the-solution}}
 
-Next part of the article.
+Here's the solution:
+
+\begin{center}\includegraphics[width=0.9\textwidth,height=\textheight]{img/soln_steps.pdf}\end{center}
 
 \end{document}
 
