Integrate new color scheme into the post.
Also some other minor formatting adjustments.

--- a/lego_puzzle/lego_puzzle.tex
+++ b/lego_puzzle/lego_puzzle.tex
@@ -195,12 +195,13 @@ spaces of the larger \(3\times 3\times 3\) volume. But the initial
 configurations I tried failed to fit more than five boxes in the space
 allowed:
 
-\begin{center}\includegraphics[width=0.5\textwidth]{img/img2.pdf}\end{center}
+\begin{center}\includegraphics[width=0.4\textwidth,height=\textheight]{img/img3.pdf}\end{center}
 
 You might be able to solve this by simply thinking about it. But it's
-even more fun to play with a physical model. \newline Did you know that
-a \(2\times 2\) Lego brick with 2 tile-heights on top forms a perfect
-cube?
+even more fun to play with a physical model.
+
+Did you know that a \(2\times 2\) Lego brick with 2 tile-heights on top
+forms a perfect cube?
 
 \begin{center}\includegraphics[width=0.5\textwidth]{img/annotated_lego_cube.png}\end{center}
 
@@ -228,7 +229,7 @@ solution. Try out the puzzle first!
 
 Here's the solution:
 
-\begin{center}\includegraphics[width=0.9\textwidth,height=\textheight]{img/soln_steps.pdf}\end{center}
+\begin{center}\includegraphics[width=0.9\textwidth,height=\textheight]{img/solution_steps.pdf}\end{center}
 
 \end{document}
 
