--- a/lego_puzzle/lego_puzzle.tex
+++ b/lego_puzzle/lego_puzzle.tex
@@ -231,5 +231,12 @@ Here's the solution:
 
 \begin{center}\includegraphics[width=0.9\textwidth,height=\textheight]{img/solution_steps.pdf}\end{center}
 
+The simplest way to characterize it is to notice that we've left the
+central cubie unoccupied.
+
+As pointed out by Knuth, there's a nice observation that can help you
+find this solution. Define a ``face cubie'' as one that's adjacent to
+the center cubie. There are 6 of these:
+
 \end{document}
 
