--- a/lego_puzzle/lego_puzzle.tex
+++ b/lego_puzzle/lego_puzzle.tex
@@ -238,5 +238,57 @@ As pointed out by Knuth, there's a nice observation that can help you
 find this solution. Define a ``face cubie'' as one that's adjacent to
 the center cubie. There are 6 of these:
 
+\begin{center}\includegraphics[width=0.5\textwidth]{img/face_cubies.pdf}\end{center}
+
+\boxedstart
+
+\textbf{Observation 1} \(\quad\) Every piece must occupy at least one
+face cubie.
+
+\boxedend 
+
+This can be confirmed by listing all piece placements within the
+\(3\times 3\times 3\) space.
+
+An immediate consequence of this observation is that --- since there are
+6 face cubies and 6 pieces --- each piece must occupy \emph{exactly} 1
+face cubie. This alone can give you the solution, but things get even
+easier when you notice:
+
+\boxedstart
+
+\textbf{Observation 2} \(\quad\)
+
+Any piece occupying the center cubie must also occupy 2 face cubies.
+
+\boxedend 
+
+The consequence of \emph{this} is that we must leave the center cubie
+vacant.
+
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
+
+If you're curious about how algorithms can solve puzzles like this one,
+I recommend reading Knuth's §7.2.2.1, which is relatively recent (in
+\emph{The Art of Computer Programming}, volume 4B, published in 2022).
+He gives credit to Jan Slothouber and William Graatsma for inventing
+this puzzle, as referenced in their apparently out-of-print book
+\emph{Cubics} from 1970 (pp.~108--109).
+
+\hypertarget{notes-on-the-images}{%
+\section{Notes on the Images}\label{notes-on-the-images}}
+
+I wrote custom javascript tools to create the vector images in this
+article. If I have time, I may one day clean up that code and release it
+as a library. For now the code is quite messy, and can be found in
+\href{https://github.com/tylerneylon/math/tree/master/lego_puzzle/img_src}{this
+directory hosted on github}.
+
+I rendered the Lego images with
+\href{https://www.bricklink.com/v3/studio/download.page}{Studio by
+BrickLink}, which is awesome, and I'm grateful it's free.
+
+The dragon image (Here be Spoilers) was created with dall·e 2.
+
 \end{document}
 
