--- a/lego_puzzle/lego_puzzle.tex
+++ b/lego_puzzle/lego_puzzle.tex
@@ -236,9 +236,10 @@ central cubie unoccupied.
 
 As pointed out by Knuth, there's a nice observation that can help you
 find this solution. Define a ``face cubie'' as one that's adjacent to
-the center cubie. There are 6 of these:
+the center cubie. There are 6 of these, positioned like the middle
+squares of a Rubik's cube:
 
-\begin{center}\includegraphics[width=0.5\textwidth]{img/face_cubies.pdf}\end{center}
+\begin{center}\includegraphics[width=0.35\textwidth,height=\textheight]{img/face_cubies.pdf}\end{center}
 
 \boxedstart
 
@@ -264,7 +265,10 @@ Any piece occupying the center cubie must also occupy 2 face cubies.
 \boxedend 
 
 The consequence of \emph{this} is that we must leave the center cubie
-vacant.
+vacant. In other words, every piece must be against one face of the
+\(3\times 3\times 3\) cube --- one piece for each face. While this fact
+doesn't completely specify the solution, it makes the search space so
+small that you can now find the answer easily.
 
 \begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
 
