Resize the Lego one-cubie image.

--- a/lego_puzzle/lego_puzzle.tex
+++ b/lego_puzzle/lego_puzzle.tex
@@ -203,7 +203,7 @@ even more fun to play with a physical model.
 Did you know that a \(2\times 2\) Lego brick with 2 tile-heights on top
 forms a perfect cube?
 
-\begin{center}\includegraphics[width=0.5\textwidth]{img/annotated_lego_cube.png}\end{center}
+\begin{center}\includegraphics[width=0.5\textwidth,height=\textheight]{img/annotated_lego_cube.png}\end{center}
 
 This allows us to construct the puzzle like so:
 
