Lego puzzle: Edits mostly to the copy.

--- a/lego_puzzle/lego_puzzle.tex
+++ b/lego_puzzle/lego_puzzle.tex
@@ -107,7 +107,7 @@
 
 \title{A Simple 3D Puzzle}
 \author{Tyler Neylon}
-\date{\href{https://tylerneylon.com/a/7date/}{345.2023}}
+\date{\href{https://tylerneylon.com/a/7date/}{25.2024}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Begin custom, non-pandoc commands.
@@ -205,7 +205,7 @@ forms a perfect cube?
 
 \begin{center}\includegraphics[width=0.5\textwidth,height=\textheight]{img/annotated_lego_cube.png}\end{center}
 
-This allows us to construct the puzzle like so:
+You can build a model of the puzzle like this:
 
 \begin{center}\includegraphics[width=0.9\textwidth,height=\textheight]{img/piece_steps2.png}\end{center}
 \begin{center}\includegraphics[width=0.9\textwidth,height=\textheight]{img/puzzle_box_steps.png}\end{center}
@@ -216,7 +216,7 @@ Here's the hodgepodge model I built with my kids' Legos:
 
 I'll write a little about the math behind this puzzle below, but for now
 I'll give you a vertical break so you don't accidentally see the
-solution. Try out the puzzle first!
+solution. Try to solve it first!
 
 ~ \vspace{1in}
 
@@ -290,9 +290,9 @@ directory hosted on github}.
 
 I rendered the Lego images with
 \href{https://www.bricklink.com/v3/studio/download.page}{Studio by
-BrickLink}, which is awesome, and I'm grateful it's free.
+BrickLink}, which is awesome. I'm grateful it's free.
 
-The dragon image (Here be Spoilers) was created with dall·e 2.
+The dragon image (\emph{Here be Spoilers}) was created with dall·e 2.
 
 \end{document}
 
