Work on image sizing for both html/pdf output.

--- a/lego_puzzle/lego_puzzle.tex
+++ b/lego_puzzle/lego_puzzle.tex
@@ -185,7 +185,7 @@
 Here's a fun puzzle: Take six boxes, each \(1\times 2\times 2\) in size,
 and find a way to pack them into a \(3\times 3\times 3\) cube.
 
-\begin{center}\includegraphics[width=0.5\textwidth]{img/img1.pdf}\end{center}
+\begin{center}\includegraphics[width=0.75\textwidth,height=\textheight]{img/img1.pdf}\end{center}
 
 I learned about this puzzle through Donald Knuth's \emph{The Art of
 Computer Programming,} \(\S 7.2.2.1\). The six boxes have a total volume
@@ -195,7 +195,7 @@ spaces of the larger \(3\times 3\times 3\) volume. But the initial
 configurations I tried failed to fit more than five boxes in the space
 allowed:
 
-\begin{center}\includegraphics[width=0.4\textwidth,height=\textheight]{img/img3.pdf}\end{center}
+\begin{center}\includegraphics[width=0.3\textwidth]{img/img3.pdf}\end{center}
 
 You might be able to solve this by simply thinking about it. But it's
 even more fun to play with a physical model.
@@ -203,16 +203,16 @@ even more fun to play with a physical model.
 Did you know that a \(2\times 2\) Lego brick with 2 tile-heights on top
 forms a perfect cube?
 
-\begin{center}\includegraphics[width=0.5\textwidth,height=\textheight]{img/annotated_lego_cube.png}\end{center}
+\begin{center}\includegraphics[width=0.32\textwidth]{img/annotated_lego_cube.png}\end{center}
 
 You can build a model of the puzzle like this:
 
-\begin{center}\includegraphics[width=0.9\textwidth,height=\textheight]{img/piece_steps2.png}\end{center}
-\begin{center}\includegraphics[width=0.9\textwidth,height=\textheight]{img/puzzle_box_steps.png}\end{center}
+\begin{center}\includegraphics[width=0.8\textwidth]{img/piece_steps2.png}\end{center}
+\begin{center}\includegraphics[width=0.8\textwidth]{img/puzzle_box_steps.png}\end{center}
 
 Here's the hodgepodge model I built with my kids' Legos:
 
-\begin{center}\includegraphics[width=0.7\textwidth]{img/home_model.jpg}\end{center}
+\begin{center}\includegraphics[width=0.72\textwidth]{img/home_model.jpg}\end{center}
 
 I'll write a little about the math behind this puzzle below, but for now
 I'll give you a vertical break so you don't accidentally see the
