In latex, vert center the spoilers image.

--- a/lego_puzzle/lego_puzzle.tex
+++ b/lego_puzzle/lego_puzzle.tex
@@ -218,9 +218,11 @@ I'll write a little about the math behind this puzzle below, but for now
 I'll give you a vertical break so you don't accidentally see the
 solution. Try to solve it first!
 
-~ \vspace{1in}
+~ \vspace*{\fill}
 
 \begin{center}\includegraphics[width=0.9\textwidth,height=\textheight]{img/here_be_spoilers.jpg}\end{center}
+
+\vspace*{\fill}
 
 ~ \newpage
 
