Update latex image sizing/spacing.

--- a/lego_puzzle/lego_puzzle.tex
+++ b/lego_puzzle/lego_puzzle.tex
@@ -231,7 +231,11 @@ solution. Try to solve it first!
 
 Here's the solution:
 
-\begin{center}\includegraphics[width=0.9\textwidth,height=\textheight]{img/solution_steps.pdf}\end{center}
+\medskip
+
+\begin{center}\includegraphics[width=1\textwidth,height=\textheight]{img/solution_steps.pdf}\end{center}
+
+\medskip
 
 The simplest way to characterize it is to notice that we've left the
 central cubie unoccupied.
@@ -241,7 +245,11 @@ find this solution. Define a ``face cubie'' as one that's adjacent to
 the center cubie. There are 6 of these, positioned like the middle
 squares of a Rubik's cube:
 
+\medskip
+
 \begin{center}\includegraphics[width=0.35\textwidth,height=\textheight]{img/face_cubies.pdf}\end{center}
+
+\medskip
 
 \boxedstart
 
