Clean up spacing in the word dall·e in latex.

--- a/lego_puzzle/lego_puzzle.tex
+++ b/lego_puzzle/lego_puzzle.tex
@@ -302,7 +302,7 @@ I rendered the Lego images with
 \href{https://www.bricklink.com/v3/studio/download.page}{Studio by
 BrickLink}, which is awesome. I'm grateful it's free.
 
-The dragon image (\emph{Here be Spoilers}) was created with dall·e 2.
+The dragon image (\emph{Here be Spoilers}) was created with dall\!·\!e 2.
 
 \end{document}
 
