Update image sizing/spacing for html.

--- a/lego_puzzle/lego_puzzle.tex
+++ b/lego_puzzle/lego_puzzle.tex
@@ -220,7 +220,7 @@ solution. Try to solve it first!
 
 ~ \vspace*{\fill}
 
-\begin{center}\includegraphics[width=0.9\textwidth,height=\textheight]{img/here_be_spoilers.jpg}\end{center}
+\begin{center}\includegraphics{img/here_be_spoilers.jpg}\end{center}
 
 \vspace*{\fill}
 
